use modern collection class constructors